--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "albatros"]
-	path = themes/albatros
-	url = https://git.42l.fr/HugoTrentesaux/albatros.git
+[submodule "themes/anatole-zola"]
+	path = themes/anatole-zola
+	url = https://github.com/longfangsong/anatole-zola
